syntax = "proto3";

package iam.mfa.grpc.api.data;

option java_multiple_files = true;
option java_package = "iam.mfa.grpc.api.data";


message GreetingRequest {
  string id = 1;
  string name = 2;
  int32 age = 3;
  string  email = 4;
}


message GreetingResponse{
  string result = 1;
  string resultMessage = 2;
}


service GreetingSender{
  rpc sendGreeting(GreetingRequest) returns (GreetingResponse);
}

